--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-sql-codegen</artifactId>
+            <version>${query.dsl.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
@@ -73,25 +80,55 @@
 
     <build>
         <plugins>
+            <!-- Q classes generated from JPA Entities cannot be used for JDBC queries -->
+
+            <!--<plugin>-->
+                <!--<groupId>com.mysema.maven</groupId>-->
+                <!--<artifactId>apt-maven-plugin</artifactId>-->
+                <!--<version>1.1.3</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>process</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<outputDirectory>target/generated-sources/java</outputDirectory>-->
+                            <!--<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>-->
+                            <!--<options>-->
+                                <!--<querydsl.entityAccessors>true</querydsl.entityAccessors>-->
+                                <!--<querydsl.useFields>false</querydsl.useFields>-->
+                            <!--</options>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+
             <plugin>
-                <groupId>com.mysema.maven</groupId>
-                <artifactId>apt-maven-plugin</artifactId>
-                <version>1.1.3</version>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-maven-plugin</artifactId>
+                <version>${query.dsl.version}</version>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>process</goal>
+                            <goal>export</goal>
                         </goals>
-                        <configuration>
-                            <outputDirectory>target/generated-sources/java</outputDirectory>
-                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                            <options>
-                                <querydsl.entityAccessors>true</querydsl.entityAccessors>
-                                <querydsl.useFields>false</querydsl.useFields>
-                            </options>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <jdbcDriver>com.mysql.jdbc.Driver</jdbcDriver>
+                    <jdbcUrl>jdbc:mysql://localhost:3306/htest</jdbcUrl>
+                    <jdbcUser>root</jdbcUser>
+                    <jdbcPassword>1234567890</jdbcPassword>
+                    <packageName>com.kardi.test.querydsl.entities</packageName>
+                    <targetFolder>${project.basedir}/target/generated-sources/java</targetFolder>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.38</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
